tests/bug_detector_tests/builtinTypeError1.test
################################################################################
#    Copyright (c) 2013-2014, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=builtinTypeError1
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector-loc
bug-detector-loc_out_WCIequals=\
noStop mode enabled. \n\
 \n\
 \n\
* Bug Detector * \n\
builtinTypeError1.js:5:5~5:32: [TypeError] 'o_15_2_4_3.toString' called by the builtin function 'Object.prototype.toLocaleString' is not a function. \n\
builtinTypeError1.js:12:5~12:36: [TypeError] 'o_15_3_4_3' called by the builtin function 'Function.prototype.apply' is not a function. \n\
builtinTypeError1.js:19:5~19:31: [TypeError] 'o_15_3_4_4' called by the builtin function 'Function.prototype.call' is not a function. \n\
builtinTypeError1.js:26:5~26:31: [TypeError] 'o_15_3_4_5' called by the builtin function 'Function.prototype.bind' is not a function. \n\
builtinTypeError1.js:33:5~33:26: [TypeError] 'o_15_9_5_44.toISOString' called by the builtin function 'Date.prototype.toJSON' is not a function. \n\
builtinTypeError1.js:4:5~4:24: [Warning] Assigning a non-function value to 'toString' may cause a TypeError. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      0 (  0.00%) | \n\
|  TypeErrors        :      5 ( 83.33%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      1 ( 16.67%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      5 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      1 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      0 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector-loc_err_equals=
